--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "robofriends",
-  "homepage": "https://myusername.github.io/robofriends",
+  "homepage": "https://writhyn.github.io/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
